colo: Flush threads boilerplate
Signed-off-by: Lukas Straub <lukasstraub2@web.de>

--- a/migration/meson.build
+++ b/migration/meson.build
@@ -23,6 +23,7 @@ softmmu_ss.add(files(
   'multifd.c',
   'multifd-zlib.c',
   'ram-compress.c',
+  'ram-colo.c',
   'options.c',
   'postcopy-ram.c',
   'savevm.c',
